--- a/PlasticManufacturer.InfraStructure/PlasticManufacturer.InfraStructure.csproj
+++ b/PlasticManufacturer.InfraStructure/PlasticManufacturer.InfraStructure.csproj
@@ -62,6 +62,30 @@
     <Compile Include="Migrations\201709302214171_StartModel.Designer.cs">
       <DependentUpon>201709302214171_StartModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711040318354_AlteracaoStatusEmployee.cs" />
+    <Compile Include="Migrations\201711040318354_AlteracaoStatusEmployee.Designer.cs">
+      <DependentUpon>201711040318354_AlteracaoStatusEmployee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711040334411_AlteracaoHireDateEmployee.cs" />
+    <Compile Include="Migrations\201711040334411_AlteracaoHireDateEmployee.Designer.cs">
+      <DependentUpon>201711040334411_AlteracaoHireDateEmployee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711040556060_AlteracaoStatusCustomer.cs" />
+    <Compile Include="Migrations\201711040556060_AlteracaoStatusCustomer.Designer.cs">
+      <DependentUpon>201711040556060_AlteracaoStatusCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711040636544_correcaoFkEmployee.cs" />
+    <Compile Include="Migrations\201711040636544_correcaoFkEmployee.Designer.cs">
+      <DependentUpon>201711040636544_correcaoFkEmployee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711040704154_correcaoFkCustomerEmployee.cs" />
+    <Compile Include="Migrations\201711040704154_correcaoFkCustomerEmployee.Designer.cs">
+      <DependentUpon>201711040704154_correcaoFkCustomerEmployee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711041622422_correcaoCustomer.cs" />
+    <Compile Include="Migrations\201711041622422_correcaoCustomer.Designer.cs">
+      <DependentUpon>201711041622422_correcaoCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AddressTypeRepository.cs" />
@@ -73,6 +97,7 @@
     <Compile Include="Repository\RawMaterialRepository.cs" />
     <Compile Include="Repository\ShippingMethodRepository.cs" />
     <Compile Include="Repository\StateRepository.cs" />
+    <Compile Include="Repository\StateReppository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -89,6 +114,24 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201709302214171_StartModel.resx">
       <DependentUpon>201709302214171_StartModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711040318354_AlteracaoStatusEmployee.resx">
+      <DependentUpon>201711040318354_AlteracaoStatusEmployee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711040334411_AlteracaoHireDateEmployee.resx">
+      <DependentUpon>201711040334411_AlteracaoHireDateEmployee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711040556060_AlteracaoStatusCustomer.resx">
+      <DependentUpon>201711040556060_AlteracaoStatusCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711040636544_correcaoFkEmployee.resx">
+      <DependentUpon>201711040636544_correcaoFkEmployee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711040704154_correcaoFkCustomerEmployee.resx">
+      <DependentUpon>201711040704154_correcaoFkCustomerEmployee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711041622422_correcaoCustomer.resx">
+      <DependentUpon>201711041622422_correcaoCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
