--- a/PlasticManufacturer.InfraStructure/PlasticManufacturer.InfraStructure.csproj
+++ b/PlasticManufacturer.InfraStructure/PlasticManufacturer.InfraStructure.csproj
@@ -86,6 +86,10 @@
     <Compile Include="Migrations\201711041622422_correcaoCustomer.Designer.cs">
       <DependentUpon>201711041622422_correcaoCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711081706090_AlteracaoCustoemr.cs" />
+    <Compile Include="Migrations\201711081706090_AlteracaoCustoemr.Designer.cs">
+      <DependentUpon>201711081706090_AlteracaoCustoemr.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AddressTypeRepository.cs" />
@@ -132,6 +136,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711041622422_correcaoCustomer.resx">
       <DependentUpon>201711041622422_correcaoCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711081706090_AlteracaoCustoemr.resx">
+      <DependentUpon>201711081706090_AlteracaoCustoemr.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
