--- a/PlasticManufacturer.Client/PlasticManufacturer.Client.csproj
+++ b/PlasticManufacturer.Client/PlasticManufacturer.Client.csproj
@@ -105,6 +105,64 @@
     <Content Include="app\cities\city.component.html" />
     <Content Include="app\colorMatchRequests\colorMatchRequest-list.component.html" />
     <Content Include="app\colorMatchRequests\colorMatchRequest.component.html" />
+    <Content Include="app\css\facebox.css" />
+    <Content Include="app\css\ie6.css" />
+    <Content Include="app\css\images\arr-1.gif" />
+    <Content Include="app\css\images\arr-2.gif" />
+    <Content Include="app\css\images\background.gif" />
+    <Content Include="app\css\images\bullet1.gif" />
+    <Content Include="app\css\images\bullet2.gif" />
+    <Content Include="app\css\images\bullet3.gif" />
+    <Content Include="app\css\images\dd-bottom.png" />
+    <Content Include="app\css\images\dd-top.png" />
+    <Content Include="app\css\images\facebox\b.png" />
+    <Content Include="app\css\images\facebox\bl.png" />
+    <Content Include="app\css\images\facebox\br.png" />
+    <Content Include="app\css\images\facebox\closelabel.gif" />
+    <Content Include="app\css\images\facebox\loading.gif" />
+    <Content Include="app\css\images\facebox\shadow.gif" />
+    <Content Include="app\css\images\facebox\tl.png" />
+    <Content Include="app\css\images\facebox\tr.png" />
+    <Content Include="app\css\images\favicon.ico" />
+    <Content Include="app\css\images\field.gif" />
+    <Content Include="app\css\images\field2.gif" />
+    <Content Include="app\css\images\footer-bg.gif" />
+    <Content Include="app\css\images\header-bg.gif" />
+    <Content Include="app\css\images\header-border.gif" />
+    <Content Include="app\css\images\icon-arr-down.gif" />
+    <Content Include="app\css\images\icon-attention.gif" />
+    <Content Include="app\css\images\icon-cancel.gif" />
+    <Content Include="app\css\images\icon-clipboard.gif" />
+    <Content Include="app\css\images\icon-delete.gif" />
+    <Content Include="app\css\images\icon-delete2.gif" />
+    <Content Include="app\css\images\icon-edit-2.gif" />
+    <Content Include="app\css\images\icon-edit.gif" />
+    <Content Include="app\css\images\icon-exit.gif" />
+    <Content Include="app\css\images\icon-formula.gif" />
+    <Content Include="app\css\images\icon-info.gif" />
+    <Content Include="app\css\images\icon-labels.gif" />
+    <Content Include="app\css\images\icon-lists.gif" />
+    <Content Include="app\css\images\icon-new.gif" />
+    <Content Include="app\css\images\icon-post.gif" />
+    <Content Include="app\css\images\icon-search.gif" />
+    <Content Include="app\css\images\icon-send.gif" />
+    <Content Include="app\css\images\icon-settings.gif" />
+    <Content Include="app\css\images\icon-success.gif" />
+    <Content Include="app\css\images\icon-zoom.gif" />
+    <Content Include="app\css\images\listing-bullet.gif" />
+    <Content Include="app\css\images\logo.png" />
+    <Content Include="app\css\images\nav-bg.gif" />
+    <Content Include="app\css\images\nav-hover.gif" />
+    <Content Include="app\css\images\paging-bg.gif" />
+    <Content Include="app\css\images\panel-expander.gif" />
+    <Content Include="app\css\images\panel-heading-bg.gif" />
+    <Content Include="app\css\images\sub-nav-border.gif" />
+    <Content Include="app\css\images\textarea.gif" />
+    <Content Include="app\css\images\utility-box.gif" />
+    <Content Include="app\css\images\whitebox-bg.png" />
+    <Content Include="app\css\images\whitebox-bottom.png" />
+    <Content Include="app\css\images\whitebox-top.png" />
+    <Content Include="app\css\style.css" />
     <Content Include="app\customerContacteds\customerContacted-list.component.html" />
     <Content Include="app\customerContacteds\customerContacted.component.html" />
     <Content Include="app\customerDefaults\customerDefault-list.component.html" />
@@ -129,6 +187,10 @@
     <Content Include="app\freights\freight-list.component.html" />
     <Content Include="app\genders\gender-list.component.html" />
     <Content Include="app\genders\gender.component.html" />
+    <Content Include="app\js\facebox.js" />
+    <Content Include="app\js\jquery-fns.js" />
+    <Content Include="app\js\jquery.js" />
+    <Content Include="app\js\validation.js" />
     <Content Include="app\maritalStatus\maritalStatus-list.component.html" />
     <Content Include="app\maritalStatus\maritalStatus.component.html" />
     <Content Include="app\nav\navbar.component.css" />
@@ -6494,6 +6556,8 @@
     <Content Include="node_modules\zone.js\LICENSE.wrapped" />
     <Content Include="node_modules\zone.js\package.json" />
     <Content Include="node_modules\zone.js\README.md" />
+    <Content Include="app\css\images\facebox\Thumbs.db" />
+    <Content Include="app\css\images\Thumbs.db" />
     <None Include="Properties\PublishProfiles\Homolog.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
