--- a/PlasticManufacturer.InfraStructure/App.config
+++ b/PlasticManufacturer.InfraStructure/App.config
@@ -10,7 +10,7 @@
      <add name="PlasticManufacturer" connectionString="Data Source=184.168.194.53; Initial Catalog=PlasticManufacturerDev; User Id=plasticDev; Password=plasticDev; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
     <add name="PlasticManufacturer" connectionString="Data Source=LENOVO-PC\SQLEXPRESS;Initial Catalog=PlasticManufacturer;Integrated Security=True" providerName="System.Data.SqlClient" />
     -->
-<add name="PlasticManufacturer" connectionString="Data Source=184.168.194.53; Initial Catalog=PlasticManufacturerDev; User Id=plasticDev; Password=plasticDev; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+    <add name="PlasticManufacturer" connectionString="Data Source=LENOVO-PC\SQLEXPRESS;Initial Catalog=PlasticManufacturer;Integrated Security=True" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <entityFramework>
