--- a/PlasticManufacturer.InfraStructure/PlasticManufacturer.InfraStructure.csproj
+++ b/PlasticManufacturer.InfraStructure/PlasticManufacturer.InfraStructure.csproj
@@ -62,6 +62,10 @@
     <Compile Include="Migrations\201711091506268_StartModel.Designer.cs">
       <DependentUpon>201711091506268_StartModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711201753222_alteracaoColorMatcNotes.cs" />
+    <Compile Include="Migrations\201711201753222_alteracaoColorMatcNotes.Designer.cs">
+      <DependentUpon>201711201753222_alteracaoColorMatcNotes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AddressTypeRepository.cs" />
@@ -90,6 +94,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201711091506268_StartModel.resx">
       <DependentUpon>201711091506268_StartModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711201753222_alteracaoColorMatcNotes.resx">
+      <DependentUpon>201711201753222_alteracaoColorMatcNotes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
